# sd-traffic-transportation

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: refresh.yml
.streamlit/: config.toml
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: city_collision_trends.parquet  collision_by_type.parquet  collision_map_points.parquet  collision_severity.parquet  flex_fleet_trends.parquet  ridership_by_route.parquet  ridership_trends.parquet  traffic_volume_streets.parquet  traffic_volume_trends.parquet  travel_time_trends.parquet  vmt_trends.parquet  youth_pass_communities.parquet  youth_pass_trends.parquet
pipeline/: build.py  ingest.py  transform.py  validate.py
